# fortran_meson_py

./: .gitignore  LICENSE  README.md  cookiecutter.json  fpm.toml
.github/workflows/: wheels.yml
app/: main.f90
c_wrapper/: fexample_c.f90
c_wrapper/circle/: circle_props_c.f90
python/: README.md  meson.build  pyproject.toml  requirements-dev.txt
python/fexample/: __init__.py
python/fexample/circle/: __init__.py  circle_props.py
python/fexample/compiled/: __init__.py
python/tests/: test_circle.py
src/: constants.f90  fexample.f90
src/circle/: circle_props.f90
{{cookiecutter.project_name}}/: .gitignore  README.md  fpm.toml
{{cookiecutter.project_name}}/app/: main.f90
{{cookiecutter.project_name}}/c_wrapper/: {{cookiecutter.project_name}}_c.f90
{{cookiecutter.project_name}}/python/: build-requirements.txt  meson.build  pyproject.toml  requirements-dev.txt
{{cookiecutter.project_name}}/python/tests/: test_check.py
{{cookiecutter.project_name}}/python/{{cookiecutter.project_name}}/: __init__.py  main.py
{{cookiecutter.project_name}}/python/{{cookiecutter.project_name}}/compiled/: __init__.py
{{cookiecutter.project_name}}/src/: {{cookiecutter.project_name}}.f90
