[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python>=0.15.0",
    "numpy",
    "fpm; platform_system!='Windows'",
    "ninja; platform_system!='Windows'", 
    "wheel"
]

[tool.black]
line-length = 79
target-version = ["py310"]


[tool.cibuildwheel]
build = ["cp310-*", "cp311-*", "cp312-*"]
skip = ["*-win32"]


[project]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
authors = [{name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}"}]
license = {text = "{{cookiecutter.license}}"}
readme = "README.md"
description = "{{cookiecutter.description}}"


dependencies = [
    'numpy',
]
